@@ -4,6 +4,15 @@ v3.3.0
 * Support for geckodriver v0.15.0.
 * Deprecated seldom used FirefoxDriver constructors.
 
+* Added javadocs to show best way to create a new FirefoxDriver:
+  ```
+  DesiredCapabilities caps = new FirefoxOptions()
+       // For example purposes only
+      .setProfile(new FirefoxProfile())
+      .addTo(DesiredCapabilities.firefox());
+  WebDriver driver = new FirefoxDriver(caps);
+  ```
+
 v3.2.0
 ======
 
